# graphics101-meshes

./: .gitignore  CMakeLists-zip.txt  CMakeLists.txt  README.md  halfedge.cpp  halfedge.h  main_meshes.cpp  mesh.cpp  meshes.pro  shape.cpp  shape.h  types.h
docs/: compute normals pseudocode.py  cylinder slices and stacks.ai  make_mesh pseudocode diagram.key  make_mesh pseudocode.py  normalizing transformation pseudocode.py
examples/: cylinder-5-100.HOW
src/: halfedge.cpp  halfedge.h  main_meshes.cpp  mesh.cpp  mesh.h  shape.cpp  types.h
test/: CMakeLists.txt  applytransform_test.cpp  applytransform_test_input.h  applytransform_test_output.h  computeNormals_test.cpp  computeNormals_test_input.h  computeNormals_test_output_unweighted.h  computeNormals_test_output_weighted.h  meshdebug.h  normalize_test.cpp  shape_test.cpp  shape_test_cylinder_5_10.h  shape_test_sphere_5_10.h
